Fix cursor style over collapse/expand icons in role editor

--- a/app/styles.less
+++ b/app/styles.less
@@ -843,6 +843,7 @@ span.votes {
 .role-edit-row {
   span.icon {
     color: black;
+    cursor: pointer;
     display: inline-block;
     min-width: 20px;
   }
